--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,23 @@
-body {background-color: #ccffcc;}
-h1 {font-size: 64px;}
+body {
+	margin: auto;
+    width: 60%;
+}
+h1 {
+  font-family: "Times new roman";
+  background-color: #cce6ff;
+  width: 500px;
+  text-align: center;
+  border: 3px solid black;
+  border-radius: 10px;
+  font-size: 64px;
+}
 h3 {font-size: 26px;}
 ol, ul, body {
-	font-size: 20px;
-	font-family: "Arial Black", Gadget, sans-serif;
+  text-align: justify;
+  font-size: 20px;
+  font-family: "Tw Cen MT";
+}
+table img:hover {
+  opacity: 0.5;
+  filter: alpha(opacity=50);
 }
