--- a/DuckHuntStyle.css
+++ b/DuckHuntStyle.css
@@ -5,7 +5,6 @@
   top: 350px;
   position: fixed;
   align-self: center;
-  
 }
 .circle {
   border-radius: 50%;
@@ -59,3 +58,5 @@
   left: 45%;
   top: 45%;
 }
+body {background-color: #0A24A9;}
+img {position: fixed;}
